docs: rewrite README for clearer onboarding